UX: Add title to user card image, shrink to avoid bleeding into text.

--- a/app/assets/stylesheets/desktop/user-card.scss
+++ b/app/assets/stylesheets/desktop/user-card.scss
@@ -225,7 +225,7 @@
 
   .card-badge {
     img {
-      max-width: 100px;
+      max-width: 40px;
     }
     position: absolute;
     right: 12px;
